@@ -34,4 +34,18 @@ libraryDependencies ++= Seq(
   "org.apache.ant" % "ant-compress" % "1.5"
 )
 
- resolvers += "SparkPackages" at "https://repos.spark-packages.org/"
+resolvers += "SparkPackages" at "https://repos.spark-packages.org/"
+
+// Required JVM options for Java 9+ module system (Spark compatibility)
+// Memory settings for the forked JVM (SBT_OPTS only affects sbt itself, not forked processes)
+Compile / run / javaOptions ++= Seq(
+  "-Xms2g",
+  "-Xmx8g",
+  "-XX:+UseG1GC",
+  "--add-opens=java.base/java.nio=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+  "--add-opens=java.base/java.util=ALL-UNNAMED",
+  "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED"
+)
